--- a/WebContent/shop.html
+++ b/WebContent/shop.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>YOUR NAME Grocery Main Page</title>
+<title>A&D Main Page</title>
+<style>
+        .menu {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+        overflow: hidden;
+        background-color: #333;
+        }
+        .menu li {
+        float: left;
+        }
+        .menu li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        }
+        .menu li a:hover {
+        background-color: #111;
+        }
+</style>     
 </head>
 <body>
-<h1 align="center">Welcome to YOUR NAME Grocery</h1>
-
-<h2 align="center"><a href="listprod.jsp">Begin Shopping</a></h2>
-
-<h2 align="center"><a href="listorder.jsp">List All Orders</a></h2>
-
+<ul class="menu">
+        <li><a href="/shop">Home</a></li>
+        <li><a href="listprod.jsp">Products</a></li>
+        <li><a href="listorder.jsp">Orders</a></li>
+        <li><a href="showcart.jsp">Cart</a></li>
+</ul>
+<h1 align="center">Welcome to A&D Groceries</h1>
 </body>
 </head>
 
